--- a/HelloWorldCS/EscapeChar/EscapeChar.csproj
+++ b/HelloWorldCS/EscapeChar/EscapeChar.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FECD84FF-675D-4C14-B9F5-F84413BA3C2E}</ProjectGuid>
+    <ProjectGuid>{F882BFB8-D842-4F31-8DB2-3B6B716A9068}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DeclaringConstants</RootNamespace>
-    <AssemblyName>DeclaringConstants</AssemblyName>
+    <RootNamespace>EscapeChar</RootNamespace>
+    <AssemblyName>EscapeChar</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeclaringConstants.cs" />
+    <Compile Include="EscapeChar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
